--- a/public/manifest.json
+++ b/public/manifest.json
@@ -30,7 +30,10 @@
       ],      
       "js": [
         "js/jquery-3.2.1.min.js",
-        "js/jquery-ui.min.js", 
+        "js/jquery-ui.min.js",
+        "js/scatterjs-core.min.js",
+        "js/scatterjs-plugin-eosjs.min.js",
+        "js/eos.min.js",
         "js/signature.js"
       ]
     }
